feature: Use DTOs and update docs
