# docs/swagger.json
@@ -55,7 +55,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Course"
+                            "$ref": "#/definitions/models.CreateUpdateCourseRequest"
                         }
                     }
                 ],
@@ -153,7 +153,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Course"
+                            "$ref": "#/definitions/models.CreateUpdateCourseRequest"
                         }
                     }
                 ],
@@ -277,7 +277,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Student"
+                            "$ref": "#/definitions/models.CreateUpdateStudentRequest"
                         }
                     }
                 ],
@@ -375,7 +375,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Student"
+                            "$ref": "#/definitions/models.CreateUpdateStudentRequest"
                         }
                     }
                 ],
@@ -599,7 +599,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Teacher"
+                            "$ref": "#/definitions/models.CreateUpdateTeacherRequest"
                         }
                     }
                 ],
@@ -697,7 +697,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Teacher"
+                            "$ref": "#/definitions/models.CreateUpdateTeacherRequest"
                         }
                     }
                 ],
@@ -794,6 +794,9 @@
         },
         "models.Course": {
             "type": "object",
+            "required": [
+                "title"
+            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -805,6 +808,61 @@
                     "type": "integer"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateUpdateCourseRequest": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "teacher_id": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateUpdateStudentRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "first_name",
+                "last_name"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateUpdateTeacherRequest": {
+            "type": "object",
+            "required": [
+                "department",
+                "first_name",
+                "last_name"
+            ],
+            "properties": {
+                "department": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
                     "type": "string"
                 }
             }
@@ -822,6 +880,11 @@
         },
         "models.Student": {
             "type": "object",
+            "required": [
+                "email",
+                "first_name",
+                "last_name"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -839,6 +902,11 @@
         },
         "models.Teacher": {
             "type": "object",
+            "required": [
+                "department",
+                "first_name",
+                "last_name"
+            ],
             "properties": {
                 "department": {
                     "type": "string"
